--- a/css/style.css
+++ b/css/style.css
@@ -185,6 +185,10 @@ overflow:hidden;
 	overflow:hidden;
 	/*background:url(http://www.instagalleryapp.com/images/section1-bg.gif) no-repeat center top;*/
 }
+.thumbnail
+{
+	padding-top: 40px;
+}
 #wrapper-inner
 {
 	width:930px;
