--- a/css/style.css
+++ b/css/style.css
@@ -11,16 +11,17 @@ body{
   background: #000 url("../images/bg_d.jpg") 0 0 repeat;
 }
 .main{
-  width: 744px;
+  width: 710px;
   height: 768px;
   float:left;
 }
 .summary{
-  font-size: 28px;
+  line-height: 60px;
+  font-size: 38px;
   font-family: "ヒラギノ角ゴ Pro W3", "Hiragino Kaku Gothic Pro", "メイリオ", Meiryo, Helvetica, Arial, sans-serif;
   color: #000;
   text-align: center;
-  width: 560px;
+  width: 584px;
   background-color: rgba(255,230,166, 0.9);
   border-radius: 8px;
   border: solid 5px #391515;
@@ -39,13 +40,13 @@ body{
 }
 .photo{
   z-index: 0;
-  width: 650px;
-  height: 420px;
+  width: 670px;
+  height: 480px;
   text-align: center;
-  margin: 36px 18px 36px 18px;
+  margin: 20px;
 }
 #main_window{
-  height: 400px;
+  height: 458px;
   border: solid 1px #CCC;
   padding: 10px;
   background-color: #FFF;
@@ -59,27 +60,35 @@ body{
 }
 
 /* ----- table style (from Twitter bootstrap) ----- */
+.tframe {
+  height: 123px;
+  width: 100%;
+  padding: 20px 55px;
+  background-color: rgba(0,0,0, 0.8);
+}
 .table {
-  font-size: 18px;
+  font-size: 15px;
   font-weight: bold;
   color: #CCC;
-  width: 650px;
-  background-color: #000;
+  width: 600px;
+  background-color: rgba(255,230,166, 0.9);
   border-collapse: collapse;
   border-spacing: 0;
-  margin: 18px;
+
 }
 .table th{
-  padding: 18px;
-  line-height: 10px;
+  padding: 10px;
+  line-height: 0px;
   text-align: center;
   vertical-align: middle;
-  background-color: #333;
+  background-color: #300;
   border-top: 1px solid #666;
 }
 .table td {
+  color: #333;
   width: 72px;
-  line-height: 26px;
+  padding: 10px;
+  line-height: 0px;
   text-align: center;
   vertical-align: middle;
   border-top: 1px solid #666;
@@ -148,8 +157,9 @@ body{
   z-index: 2;
   width: 48px;
   height: 48px;
-  margin-left: 8px;
-  margin-right: 2px;
+  margin-top: 10px;
+  margin-left: 6px;
+  margin-right: 4px;
   cursor: pointer;
   text-indent: 120%;
   white-space: nowrap;
