--- a/css/style.css
+++ b/css/style.css
@@ -58,8 +58,9 @@ div.timeleft{
   overflow: hidden;
 }
 .photo{
-  position: relative;
-  top: 30px;
+  position: absolute;
+  top: 80px;
+  //top: 30px;
   z-index: 0;
   width: 670px;
   height: 480px;
@@ -82,10 +83,10 @@ div.timeleft{
 
 /* ----- table style (from Twitter bootstrap) ----- */
 .tframe {
-  position: relative;
-  top: 70px;
+  position: absolute;
+  top: 590px;
   height: 123px;
-  width: 100%;
+  width: 710px;
   padding: 20px 20px;
   background-color: rgba(0,0,0, 0.8);
 }
